# TetrisNoPointer

./: CMakeLists.txt  README.md
cmake/: source_handler.cmake
src/: main.c  rng.c  rng.h  types.h
